<resources>
    <string name="app_name">ERP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_date">Current Date</string>
    <string name="date">Date</string>
    <string name="current_time">Current Time</string>
    <string name="time">Time</string>
    <string name="customer_name">Customer Name</string>

    <string name="location">Location</string>
    <string name="submit">Submit</string>
    <string name="fun_fact">Fun Fact</string>
    <string name="login">Login</string>
    <string name="please_signin">Please Sing In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="take_face">Camera</string>
    <string name="back">Back</string>
</resources>